Fix Footer Misalignment During Long list

--- a/static/style.css
+++ b/static/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    height: 100vh;
-    padding: 3%;
+    min-height: 100vh;
+    padding: 3% 3% 1% 3%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -106,6 +106,10 @@ button:hover {
 }
 
 footer {
+    margin-top: 25vh;
+    align-self: flex-end;
+    height: 8vh;
+    padding: 20px 0px;
     font-size: 0.8rem;
     align-self: center;
     display: flex;
